[gd_scene load_steps=10 format=3 uid="uid://bbnrpsxhyemr7"]

[ext_resource type="Script" path="res://IntroScene.gd" id="1_5s011"]
[ext_resource type="Texture2D" uid="uid://cu8p4clmxi70o" path="res://quarto-viajante.png" id="1_57ttn"]
[ext_resource type="Texture2D" uid="uid://c27mlfm6v4yvk" path="res://cientista.png" id="2_552py"]
[ext_resource type="Texture2D" uid="uid://n31ee3805lok" path="res://balao-fala.png" id="3_1fra2"]
[ext_resource type="Texture2D" uid="uid://dox3rl6yvw1cx" path="res://viajante.png" id="4_l4nut"]
[ext_resource type="Texture2D" uid="uid://cyxgry3g60vlh" path="res://portal.png" id="5_seqx8"]
[ext_resource type="AudioStream" uid="uid://oo3h76r5gl22" path="res://musica-quarto.mp3" id="6_gvn1x"]
[ext_resource type="FontFile" uid="uid://djy146x3wurjd" path="res://fonts/Minecraftia-Regular.ttf" id="6_qqvib"]
[ext_resource type="AudioStream" uid="uid://bhtxx0mebdpx3" path="res://musica-portal.mp3" id="7_0td3f"]

[node name="IntroScene" type="Node2D"]
script = ExtResource("1_5s011")

[node name="QuartoFundo" type="Sprite2D" parent="."]
position = Vector2(453, 383.25)
scale = Vector2(1.22461, 1.29882)
texture = ExtResource("1_57ttn")

[node name="BruxoSprite" type="Sprite2D" parent="."]
position = Vector2(856, 504)
scale = Vector2(0.82, 0.756)
texture = ExtResource("2_552py")

[node name="ViajanteSprite" type="Sprite2D" parent="."]
position = Vector2(123, 536)
scale = Vector2(0.388898, 0.382688)
texture = ExtResource("4_l4nut")

[node name="UIScript" type="CanvasLayer" parent="."]

[node name="BalaoFala" type="TextureRect" parent="UIScript"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -389.0
offset_top = -234.0
offset_right = 323.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_1fra2")

[node name="NomePersonagemLabel" type="Label" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 347.0
offset_top = -18.0
offset_right = 392.0
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("6_qqvib")
horizontal_alignment = 1

[node name="TextoDialogoLabel" type="RichTextLabel" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 102.0
offset_top = 46.0
offset_right = 628.0
offset_bottom = 159.0
theme_override_fonts/normal_font = ExtResource("6_qqvib")

[node name="AvancarButton" type="Button" parent="UIScript/BalaoFala"]
layout_mode = 0
offset_left = 574.0
offset_top = 191.0
offset_right = 645.0
offset_bottom = 222.0
text = "Avan√ßar"

[node name="PortalSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(872.5, 537.5)
scale = Vector2(0.642293, 0.74625)
texture = ExtResource("5_seqx8")

[node name="ClaraoFundo" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gvn1x")
autoplay = true

[node name="PortalSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_0td3f")
